# probe

./: .editorconfig  .gitignore  .lycheeignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ORCHESTRATOR_ANALYSIS.md  ORCHESTRATOR_RECOVERY_AGENT_DESIGN.md  ORCHESTRATOR_V2_TEST_RUN_REPORT.md  README.md  SECURITY.md  SEGMENT_12_COMPLETION_REPORT.md  clippy.toml  config  deny.toml  justfile  rustfmt.toml  subprocess_stdin_research.md  test_schema.proto
crates/prb-ai/: Cargo.toml  README.md
crates/prb-ai/src/: config.rs  context.rs  error.rs  explain.rs  lib.rs  prompt.rs
crates/prb-ai/tests/: explain_http_test.rs
crates/prb-capture/: Cargo.toml  README.md
crates/prb-capture/src/: adapter.rs  capture.rs  config.rs  error.rs  interfaces.rs  lib.rs  privileges.rs  stats.rs
crates/prb-capture/tests/: adapter_tests.rs  capture_tests.rs  config_tests.rs  error_tests.rs  interfaces_tests.rs  packet_tests.rs  privileges_tests.rs  stats_tests.rs
crates/prb-cli/: Cargo.toml  README.md
crates/prb-cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/prb-cli/tests/: cli_decode_test.rs  cli_e2e.rs  command_handlers_test.rs  integration.rs  real_data_cli_tests.rs
crates/prb-core/: Cargo.toml  README.md
crates/prb-core/benches/: conversation_engine.rs
crates/prb-core/src/: conversation.rs  conversation_tests.rs  decode.rs  engine.rs  engine_tests.rs  error.rs  event.rs  event_tests.rs  flow.rs  lib.rs  metrics.rs  metrics_tests.rs  schema.rs  trace.rs  traits.rs
crates/prb-core/tests/: fixture_validation.rs  real_data_conversation_tests.rs  real_data_otel_correlation_tests.rs
crates/prb-dds/: Cargo.toml  README.md
crates/prb-dds/benches/: rtps_decode.rs
crates/prb-dds/src/: correlation.rs  decoder.rs  discovery.rs  error.rs  lib.rs  rtps_parser.rs  tests.rs
crates/prb-decode/: Cargo.toml  README.md
crates/prb-decode/src/: lib.rs  schema_backed.rs  wire_format.rs
crates/prb-decode/tests/: protobuf_malformed_test.rs  protobuf_property_test.rs  protobuf_type_matrix_test.rs  real_data_http_tests.rs  schema_backed_tests.rs  wire_format_tests.rs
crates/prb-detect/: Cargo.toml  README.md
crates/prb-detect/benches/: detection.rs
crates/prb-detect/src/: detector.rs  engine.rs  lib.rs  registry.rs  types.rs
crates/prb-detect/tests/: integration_registry.rs
crates/prb-export/: Cargo.toml  README.md
crates/prb-export/src/: csv_export.rs  error.rs  har_export.rs  html_export.rs  lib.rs  merge.rs  otlp_export.rs  otlp_import.rs  parquet_export.rs
crates/prb-export/tests/: real_data_export_tests.rs
crates/prb-fixture/: Cargo.toml  README.md
crates/prb-fixture/src/: adapter.rs  error.rs  format.rs  lib.rs
crates/prb-fixture/tests/: integration_tests.rs
crates/prb-grpc/: Cargo.toml  README.md
crates/prb-grpc/benches/: grpc_decode.rs
crates/prb-grpc/src/: correlation.rs  decoder.rs  error.rs  h2.rs  lib.rs  lpm.rs  tests.rs
crates/prb-grpc/tests/: real_data_fixture_tests.rs  real_data_tests.rs
crates/prb-integration-tests/: Cargo.toml
crates/prb-integration-tests/src/: lib.rs
crates/prb-integration-tests/tests/: cross_crate_integration.rs
crates/prb-pcap/: Cargo.toml  README.md
crates/prb-pcap/benches/: pipeline_throughput.rs
crates/prb-pcap/src/: error.rs  factories.rs  flow_key.rs  lib.rs  mmap_reader.rs  normalize.rs  pipeline.rs  pipeline_core.rs  reader.rs  tcp.rs
crates/prb-pcap/tests/: cipher_suite_coverage_test.rs  error_tests.rs  keylog_tests.proptest-regressions  keylog_tests.rs  normalize_additional_tests.rs  normalize_edge_tests.rs  normalize_lifecycle_test.rs  normalize_link_edge_test.rs  normalize_linktype_tests.rs  normalize_memory_test.rs  normalize_property_test.rs  normalize_protocol_tests.rs  normalize_tests.rs  orchestrator_tests.rs  pipeline_error_injection_test.rs  pipeline_error_tests.rs  pipeline_ingest_error_tests.rs  pipeline_property_test.rs  pipeline_tests.rs  reader_edge_tests.rs  (+23 more)
crates/prb-plugin-api/: Cargo.toml  README.md
crates/prb-plugin-native/: Cargo.toml  README.md  default_18269904333217090918_0_11049.profraw  default_18269904333217090918_0_11050.profraw  default_18269904333217090918_0_11051.profraw  default_18269904333217090918_0_11052.profraw  default_18269904333217090918_0_11053.profraw  default_18269904333217090918_0_11054.profraw  default_18269904333217090918_0_11055.profraw  default_18269904333217090918_0_11056.profraw  default_18269904333217090918_0_11169.profraw  default_18269904333217090918_0_11170.profraw  default_18269904333217090918_0_11199.profraw  default_18269904333217090918_0_11200.profraw  default_18269904333217090918_0_11201.profraw  default_18269904333217090918_0_11203.profraw  default_18269904333217090918_0_11206.profraw  default_18269904333217090918_0_11208.profraw  default_18269904333217090918_0_11240.profraw  default_18269904333217090918_0_11251.profraw  default_18269904333217090918_0_11254.profraw  default_18269904333217090918_0_11366.profraw  default_18269904333217090918_0_11367.profraw  default_18269904333217090918_0_11368.profraw  default_18269904333217090918_0_11370.profraw  default_18269904333217090918_0_20247.profraw  default_18269904333217090918_0_20416.profraw  default_18269904333217090918_0_24624.profraw  default_18269904333217090918_0_24625.profraw  default_18269904333217090918_0_24626.profraw  default_18269904333217090918_0_24627.profraw  default_18269904333217090918_0_24629.profraw  default_18269904333217090918_0_24630.profraw  default_18269904333217090918_0_24632.profraw  default_18269904333217090918_0_24633.profraw  default_18269904333217090918_0_24744.profraw  default_18269904333217090918_0_24746.profraw  default_18269904333217090918_0_24747.profraw  default_18269904333217090918_0_24748.profraw  default_18269904333217090918_0_24749.profraw  (+146 more)
crates/prb-plugin-wasm/: Cargo.toml  README.md
crates/prb-query/: Cargo.toml  README.md
crates/prb-schema/: Cargo.toml  README.md
crates/prb-storage/: Cargo.toml  README.md
crates/prb-tui/: Cargo.toml  README.md
crates/prb-zmq/: Cargo.toml  README.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: keylog_parser.rs
(+916 files in other folders)
