[workspace]
resolver = "3"
members = [
    "crates/prb-core",
    "crates/prb-cli",
    "crates/prb-fixture",
    "crates/prb-storage",
    "crates/prb-schema",
    "crates/prb-decode",
    "crates/prb-pcap",
    "crates/prb-grpc",
    "crates/prb-zmq",
    "crates/prb-dds",
    "crates/prb-detect",
    "crates/prb-query",
    "crates/prb-tui",
    "crates/prb-export",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/yourusername/prb"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = { version = "1", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Utilities
camino = { version = "1.2", features = ["serde1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }

# Network parsing
pcap-parser = "0.17.0"
etherparse = "0.19.0"

# TLS parsing and cryptography
tls-parser = "0.12.2"
ring = "0.17"

# Parsing
nom = "8"

# TUI
ratatui = "0.30"
crossterm = "0.29"
tui-tree-widget = "0.24"
tui-input = "0.15"
unicode-width = "0.2"

# Async
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-stream = "0.1"

# Test dependencies
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
