[package]
name = "prb-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered packet explanation engine for Probe"

[dependencies]
prb-core = { path = "../prb-core" }
async-openai = { version = "0.33", features = ["_api"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]
bytes = { workspace = true }
