[package]
name = "prb-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered analysis and explanation for protocol debugging"
keywords = ["ai", "llm", "protocol", "analysis"]
categories = ["development-tools"]

[dependencies]
prb-core = { path = "../prb-core" }
async-openai = "0.33"
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
