[package]
name = "prb-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
prb-pcap = { path = "../prb-pcap" }
pcap = "2.4"
crossbeam-channel = "0.5"
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
