[package]
name = "prb-capture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Live network packet capture using libpcap"
keywords = ["pcap", "capture", "network", "packet"]
categories = ["network-programming"]

[dependencies]
prb-core = { path = "../prb-core" }
prb-pcap = { path = "../prb-pcap" }
pcap = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
