[package]
name = "prb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "prb"
path = "src/main.rs"

[dependencies]
prb-core = { path = "../prb-core" }
prb-fixture = { path = "../prb-fixture" }
prb-storage = { path = "../prb-storage" }
prb-schema = { path = "../prb-schema" }
prb-decode = { path = "../prb-decode" }
prb-pcap = { path = "../prb-pcap" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
insta = "1.41"
predicates = "3.1"
tempfile = "3.13"
prost = "0.14"
prost-types = "0.14"
base64 = { workspace = true }
