[package]
name = "prb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for protocol debugging and analysis"
keywords = ["cli", "protocol", "debugging", "network"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "prb"
path = "src/main.rs"

[dependencies]
prb-core = { path = "../prb-core" }
prb-fixture = { path = "../prb-fixture" }
prb-storage = { path = "../prb-storage" }
prb-schema = { path = "../prb-schema" }
prb-decode = { path = "../prb-decode" }
prb-pcap = { path = "../prb-pcap" }
prb-query = { path = "../prb-query" }
prb-tui = { path = "../prb-tui" }
prb-export = { path = "../prb-export" }
# prb-ai = { path = "../prb-ai" }  # Temporarily disabled due to async-openai API changes
prb-capture = { path = "../prb-capture" }
prb-plugin-api = { path = "../prb-plugin-api" }
prb-plugin-native = { path = "../prb-plugin-native" }
prb-plugin-wasm = { path = "../prb-plugin-wasm" }
mcap = "0.24"
bytes = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
tokio = { workspace = true }
ctrlc = { version = "3", features = ["termination"] }
dirs = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
prost = "0.14"
prost-types = "0.14"
base64 = { workspace = true }
etherparse = { workspace = true }
