[package]
name = "prb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
prb-pcap = { path = "../prb-pcap" }
insta = { workspace = true }
proptest = { workspace = true }
