[package]
name = "prb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for protocol debugging and network analysis"
keywords = ["protocol", "debugging", "network", "capture"]
categories = ["development-tools", "network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
prb-pcap = { path = "../prb-pcap" }
insta = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "conversation_engine"
harness = false
