[package]
name = "prb-dds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
