[package]
name = "prb-dds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DDS/RTPS protocol decoder for real-time publish-subscribe systems"
keywords = ["dds", "rtps", "protocol", "decoder"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
prb-core = { path = "../prb-core" }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "rtps_decode"
harness = false
