[package]
name = "prb-decode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
prost = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
