[package]
name = "prb-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
base64 = "0.22"

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
