[package]
name = "prb-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC protocol decoder for HTTP/2-based RPC analysis"
keywords = ["grpc", "rpc", "protocol", "decoder"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
prb-core = { path = "../prb-core" }
prb-decode = { path = "../prb-decode" }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

# gRPC message decompression
flate2 = "1.0"

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "grpc_decode"
harness = false
