[package]
name = "prb-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
# Empty lib to make this a valid crate
path = "src/lib.rs"

[dependencies]
# Core dependencies
prb-core = { path = "../prb-core" }
prb-pcap = { path = "../prb-pcap" }
prb-detect = { path = "../prb-detect" }
prb-export = { path = "../prb-export" }
prb-query = { path = "../prb-query" }
prb-storage = { path = "../prb-storage" }

# Common dependencies
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Test dependencies
tempfile = { workspace = true }
etherparse = { workspace = true }
