[package]
name = "prb-pcap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
prb-detect = { path = "../prb-detect" }

# Protocol decoders (optional, for tests)
prb-grpc = { path = "../prb-grpc", optional = true }
prb-zmq = { path = "../prb-zmq", optional = true }
prb-dds = { path = "../prb-dds", optional = true }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

# PCAP parsing
pcap-parser = "0.17.0"

# Network parsing for test fixtures
etherparse = "0.19.0"

# TCP stream reassembly
smoltcp = { version = "0.12", default-features = false, features = ["proto-ipv4", "proto-ipv6"] }

# Parallel processing
rayon.workspace = true
crossbeam-channel = "0.5"

# TLS parsing and cryptography
tls-parser.workspace = true
ring.workspace = true

# Hex encoding for TLS keys
hex = "0.4"

# Memory-mapped file I/O
memmap2 = "0.9"

[dev-dependencies]
tempfile.workspace = true
prb-grpc = { path = "../prb-grpc" }
prb-zmq = { path = "../prb-zmq" }
prb-dds = { path = "../prb-dds" }
criterion.workspace = true
walkdir.workspace = true

[[bench]]
name = "pipeline_throughput"
harness = false

[features]
default = []
builtin-decoders = ["prb-grpc", "prb-zmq", "prb-dds"]
