[package]
name = "prb-plugin-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native plugin runtime for dynamic protocol decoders"
keywords = ["plugin", "native", "dynamic"]
categories = ["development-tools"]

[dependencies]
prb-core = { path = "../prb-core" }
prb-plugin-api = { path = "../prb-plugin-api" }
prb-detect = { path = "../prb-detect" }
libloading = "0.9"
bytes.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
