[package]
name = "prb-plugin-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly plugin runtime for sandboxed protocol decoders"
keywords = ["plugin", "wasm", "webassembly"]
categories = ["development-tools", "wasm"]

[dependencies]
prb-core = { path = "../prb-core" }
prb-plugin-api = { path = "../prb-plugin-api" }
prb-detect = { path = "../prb-detect" }
extism = "1.10"
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
semver = "1.0.27"

[dev-dependencies]
tempfile = { workspace = true }
