[package]
name = "prb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
nom = "8"
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "query_eval"
harness = false
