[package]
name = "prb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Query language for filtering and analyzing protocol events"
keywords = ["query", "filter", "dsl", "parser"]
categories = ["parser-implementations"]

[dependencies]
prb-core = { path = "../prb-core" }
nom = { workspace = true }
regex = "1.10"
thiserror = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "query_eval"
harness = false
