[package]
name = "prb-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
prb-query = { path = "../prb-query" }
prb-fixture = { path = "../prb-fixture" }
prb-storage = { path = "../prb-storage" }
prb-pcap = { path = "../prb-pcap" }
prb-grpc = { path = "../prb-grpc" }
prb-zmq = { path = "../prb-zmq" }
prb-dds = { path = "../prb-dds" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tui-tree-widget = { workspace = true }
tui-input = { workspace = true }
unicode-width = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
etherparse = { workspace = true }
