[package]
name = "prb-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prb-core = { path = "../prb-core" }
prb-query = { path = "../prb-query" }
prb-fixture = { path = "../prb-fixture" }
prb-storage = { path = "../prb-storage" }
prb-pcap = { path = "../prb-pcap" }
prb-grpc = { path = "../prb-grpc" }
prb-zmq = { path = "../prb-zmq" }
prb-dds = { path = "../prb-dds" }
prb-capture = { path = "../prb-capture" }
prb-schema = { path = "../prb-schema" }
prb-decode = { path = "../prb-decode" }
prb-ai = { path = "../prb-ai" }
prb-plugin-api = { path = "../prb-plugin-api" }
prb-plugin-native = { path = "../prb-plugin-native" }
prb-plugin-wasm = { path = "../prb-plugin-wasm" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tui-tree-widget = { workspace = true }
tui-input = { workspace = true }
unicode-width = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
etherparse = { workspace = true }
insta = "1"
