[package]
name = "prb-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal user interface for interactive protocol debugging"
keywords = ["tui", "terminal", "ui", "interactive"]
categories = ["command-line-utilities"]

[features]
default = []
parquet = ["prb-export/parquet"]

[dependencies]
prb-core = { path = "../prb-core" }
prb-query = { path = "../prb-query" }
prb-fixture = { path = "../prb-fixture" }
prb-storage = { path = "../prb-storage" }
prb-pcap = { path = "../prb-pcap" }
prb-grpc = { path = "../prb-grpc" }
prb-zmq = { path = "../prb-zmq" }
prb-dds = { path = "../prb-dds" }
prb-capture = { path = "../prb-capture" }
prb-schema = { path = "../prb-schema" }
prb-decode = { path = "../prb-decode" }
prb-export = { path = "../prb-export" }
prb-ai = { path = "../prb-ai" }
prb-plugin-api = { path = "../prb-plugin-api" }
prb-plugin-native = { path = "../prb-plugin-native" }
prb-plugin-wasm = { path = "../prb-plugin-wasm" }

ratatui = { workspace = true }
crossterm = { workspace = true }
tui-tree-widget = { workspace = true }
tui-input = { workspace = true }
unicode-width = { workspace = true }
nucleo-matcher = "0.3"

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-openai = "0.20"
lazy_static = "1.5"

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
prost-reflect = "0.16"
pcap = { workspace = true }

[dev-dependencies]
prb-test-utils = { path = "../prb-test-utils" }
tempfile = { workspace = true }
etherparse = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "large_file_perf"
harness = false
