[package]
name = "prb-zmq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ZeroMQ/ZMTP protocol decoder for message queue analysis"
keywords = ["zeromq", "zmq", "zmtp", "decoder"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
prb-core = { path = "../prb-core" }
thiserror = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "zmtp_decode"
harness = false
